--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -35,6 +35,7 @@
             <div layout:replace="layout/AddOn :: addon"></div>
     <!-- Plugins JS File -->
     <script th:src="@{js/jquery.min.js}" type="text/javascript"></script>
+    <script th:src="@{js/bootstrap.min.js}"></script>
     <script th:src="@{js/bootstrap.bundle.min.js}" type="text/javascript"></script>
     <script th:src="@{js/jquery.hoverIntent.min.js}" type="text/javascript"></script>
     <script th:src="@{js/jquery.waypoints.min.js}"></script>
@@ -42,7 +43,8 @@
     <script th:src="@{js/owl.carousel.min.js}" type="text/javascript"></script>
     <script th:src="@{js/bootstrap-input-spinner.js}"></script>
     <script th:src="@{js/jquery.magnific-popup.min.js}"></script>
-    <script th:src="@{js/bootstrap.min.js}"></script>
+    <script th:src="@{js/jquery.elevateZoom.min.js}"></script>
+
     <!-- Main JS File -->
     <script th:src="@{js/main.js}"></script>
     <script th:src="@{js/index.js}"></script>
