--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" th:href="@{css/index.css}">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
+
+
 </head>
 <body>
     <div class="page-wrapper">
@@ -29,6 +31,7 @@
             <div layout:fragment="content"></div>
             <div layout:fragment="about"></div>
             <div layout:fragment="products"></div>
+            <div layout:fragment="pay"></div>
             <div layout:replace="layout/footer :: footer"></div>
         </div>
     </div>
