--- a/src/main/resources/templates/login_home.html
+++ b/src/main/resources/templates/login_home.html
@@ -1,53 +1,48 @@
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
-    <link rel="stylesheet" type="text/css" th:href="@{css/bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{css/login_home.css}">
-    <link rel="stylesheet"
-          th:href="@{https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css}">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 </head>
 <body>
-
-<div class="limiter">
-    <div class="container-login100" th:style="'background-image: url(images/login_home/bg-01.jpg)'">
-        <div class="wrap-login100" style="padding: 65px 55px 54px 55px;">
-            <form class="login100-form validate-form" name="f" method="POST" th:action="@{/login_security}">
-					<span class="login100-form-title">
-						Sign in
-					</span>
-                <div class="text-center">
-                    <span>New Here? <a href="#" class="font-weight-bold">Create an Account</a></span>
-                </div>
-                <div class="wrap-input100 validate-input" style="margin-bottom: 23px">
-                    <span>Username</span>
-                    <input class="input100" type="text" name="username">
-                </div>
-
-                <div class="wrap-input100 validate-input">`````
-                    <span>Password</span>
-                    <input class="input100" type="password" name="password">
-                </div>
-
-                <div style="padding-top: 20px ; padding-bottom: 20px">
-                    <input type="checkbox" id="signin-remember">
-                    <label for="signin-remember">Remember Me</label>
-                    <a href="#" style="padding-left: 20px">Forgot Your Password?</a>
-                </div>
-
-                <div class="container-login100-form-btn">
-                    <div class="wrap-login100-form-btn">
-                        <div class="login100-form-bgbtn"></div>
-                        <button class="login100-form-btn" name="submit" type="submit">
-                            Login
-                        </button>
+<div class="form_wrapper">
+    <div class="form_container">
+        <div class="title_container">
+            <h2>Sign in</h2>
+            <div class="text-center">
+                <span style="font-size: 10px;">New Here? <a href="#" style="font-size: 10px;text-decoration: none;" class="font-weight-bold">Create an Account</a></span>
+            </div>
+        </div>
+        <div class="row clearfix">
+            <div class="">
+                <form name="f" method="POST" th:action="@{/login_security}">
+                    <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user"></i></span>
+                        <input type="text" name="username" placeholder="Username" required />
                     </div>
-                </div>
+                    <div class="input_field"> <span><i aria-hidden="true" class="fa fa-lock"></i></span>
+                        <input type="password" name="password" placeholder="Password" required />
+                    </div>
 
-            </form>
+                    <div class="row clearfix">
+                        <div class="col_half">
+                            <div class="input_field checkbox_option">
+                                <input type="checkbox" id="cb1">
+                                <label for="cb1">Remember Me</label>
+                            </div>
+                        </div>
+                        <div class="col_half">
+                            <div class="input_field">
+                                <a href="#" style="font-size: 10px;text-decoration: none;">
+                                    Forgot Your Password?</a>
+                            </div>
+                        </div>
+                    </div>
+                    <input class="button" name="submit" type="submit" value="Login" />
+
+                </form>
+            </div>
         </div>
     </div>
 </div>
 </body>
+<script type="text/javascript" th:href="@{login_home.js}"></script>
 </html>
