--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -102,9 +102,6 @@
                                                 <a th:href="@{/productdetail(id=${product.productid})}">
                                                     <img th:src="@{${'/images/' + product.image}}" alt="Product image" class="product-image">
                                                 </a>
-                                                <div class="product-action">
-                                                    <button type="submit" class="btn-product btn-cart" ><span>add to cart</span></button>
-                                                </div><!-- End .product-action -->
                                             </figure><!-- End .product-media -->
 
                                             <div class="product-body">
@@ -128,22 +125,10 @@
                                 </div><!-- End .row -->
                             </div><!-- End .products -->
 
-
-                            <nav aria-label="Page navigation">
+                            <nav aria-label="Page navigation ">
                                 <ul class="pagination justify-content-center">
-                                    <li class="page-item disabled">
-                                        <a class="page-link page-link-prev" href="#" aria-label="Previous" tabindex="-1" aria-disabled="true">
-                                            <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>Prev
-                                        </a>
-                                    </li>
-                                    <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                    <li class="page-item-total">of 6</li>
-                                    <li class="page-item">
-                                        <a class="page-link page-link-next" href="#" aria-label="Next">
-                                            Next <span aria-hidden="true"><i class="icon-long-arrow-right"></i></span>
-                                        </a>
+                                    <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
+                                        <a class="page-link" th:href="@{/products(size=${size}, page=${t})}" th:text="${t+1}"></a>
                                     </li>
                                 </ul>
                             </nav>
