--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -289,35 +289,25 @@
                                         }
                                     }'>
 
-                            <div class="product">
+                            <div class="product" th:each="random : ${randoms}">
                                 <figure class="product-media">
-                                    <a href="product.html">
-                                        <img src="images/index/products/product-2.jpg" alt="Product image"
+                                    <a th:href="@{/productdetail(id=${random.productid})}">
+                                        <img th:src="@{${'/images/upload/' + random.images[0].name}}" alt="Product image"
                                              class="product-image">
                                     </a>
-
-                                    <div class="product-action-vertical">
-                                        <a href="#" class="btn-product-icon btn-wishlist" title="Add to Wishlist"><span>add to wishlist</span></a>
-                                    </div><!-- End .product-action-vertical -->
-
-                                    <div class="product-action">
-                                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                                    </div><!-- End .product-action -->
                                 </figure><!-- End .product-media -->
 
                                 <div class="product-body">
                                     <div class="product-cat">
                                         <a href="#">Shooter</a>
                                     </div><!-- End .product-cat -->
-                                    <h3 class="product-title"><a href="product.html">World War Z</a></h3>
+                                    <h3 class="product-title"><a th:href="@{/productdetail(id=${random.productid})}" th:text="${random.name}">World War Z</a></h3>
                                     <!-- End .product-title -->
-                                    <div class="product-price">
+                                    <div class="product-price" th:text="${random.price}">
                                         $39.99
                                     </div><!-- End .product-price -->
                                 </div><!-- End .product-body -->
                             </div><!-- End .product -->
-
-
                         </div><!-- End .owl-carousel -->
                     </div><!-- .End .tab-pane -->
                 </div><!-- End .tab-content -->
