--- a/src/main/resources/templates/AdminIndex.html
+++ b/src/main/resources/templates/AdminIndex.html
@@ -67,7 +67,7 @@
     <!-- End Navbar -->
     <div class="content">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row" th:if="${#authorization.expression('hasAuthority(''USER'')')}">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card card-stats">
                         <div class="card-header card-header-warning card-header-icon">
@@ -110,7 +110,7 @@
                                 <i class="material-icons">assignment</i>
                             </div>
                             <p class="card-category">Order pending</p>
-                            <h3 class="card-title">75</h3>
+                            <h3 class="card-title" th:text="${orderPaid}">75</h3>
                         </div>
                         <div class="card-footer">
                             <div class="stats">
@@ -126,7 +126,7 @@
                                 <i class="material-icons">fact_check</i>
                             </div>
                             <p class="card-category">Order done</p>
-                            <h3 class="card-title">+245</h3>
+                            <h3 class="card-title" th:text="${orderDone}">+245</h3>
                         </div>
                         <div class="card-footer">
                             <div class="stats">
@@ -136,52 +136,70 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card card-chart">
-                        <div class="card-header card-header-success">
-                            <div class="ct-chart" id="dailySalesChart"></div>
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Daily Sales</h4>
-                            <p class="card-category">
-                                <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p>
+            <div class="row" th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card card-stats">
+                        <div class="card-header card-header-warning card-header-icon">
+                            <div class="card-icon">
+                                <i class="material-icons">account_balance_wallet</i>
+                            </div>
+                            <p class="card-category">Balance</p>
+                            <h3 class="card-title" th:text="${user.wallet}">49/50
+                                <small>$</small>
+                            </h3>
                         </div>
                         <div class="card-footer">
                             <div class="stats">
-                                <i class="material-icons">access_time</i> updated 4 minutes ago
+                                <i class="material-icons text-danger">warning</i>
+                                <a href="javascript:;">Get More Space...</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card card-chart">
-                        <div class="card-header card-header-warning">
-                            <div class="ct-chart" id="websiteViewsChart"></div>
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Email Subscriptions</h4>
-                            <p class="card-category">Last Campaign Performance</p>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card card-stats">
+                        <div class="card-header card-header-success card-header-icon">
+                            <div class="card-icon">
+                                <i class="material-icons">store</i>
+                            </div>
+                            <p class="card-category">Product</p>
+                            <h3 class="card-title" th:text="${products}">$34,245</h3>
                         </div>
                         <div class="card-footer">
                             <div class="stats">
-                                <i class="material-icons">access_time</i> campaign sent 2 days ago
+                                <i class="material-icons">date_range</i> Last 24 Hours
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card card-chart">
-                        <div class="card-header card-header-danger">
-                            <div class="ct-chart" id="completedTasksChart"></div>
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Completed Tasks</h4>
-                            <p class="card-category">Last Campaign Performance</p>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card card-stats">
+                        <div class="card-header card-header-danger card-header-icon">
+                            <div class="card-icon">
+                                <i class="material-icons">assignment</i>
+                            </div>
+                            <p class="card-category">Quantity User</p>
+                            <h3 class="card-title" th:text="${quantityUser}">75</h3>
                         </div>
                         <div class="card-footer">
                             <div class="stats">
-                                <i class="material-icons">access_time</i> campaign sent 2 days ago
+                                <i class="material-icons">local_offer</i> Tracked from Github
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card card-stats">
+                        <div class="card-header card-header-info card-header-icon">
+                            <div class="card-icon">
+                                <i class="material-icons">fact_check</i>
+                            </div>
+                            <p class="card-category">Order done</p>
+                            <h3 class="card-title" th:text="${orderDone}">+245</h3>
+                        </div>
+                        <div class="card-footer">
+                            <div class="stats">
+                                <i class="material-icons">update</i> Just Updated
                             </div>
                         </div>
                     </div>
