--- a/src/main/resources/templates/update_user.html
+++ b/src/main/resources/templates/update_user.html
@@ -22,14 +22,13 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group">
-                                            <label for="id" class="bmd-label-floating">ID</label>
-                                            <input type="text" name="id" th:field="${user.id}" class="form-control">
+                                            <input type="hidden" name="id" th:field="${user.id}" class="form-control">
                                         </div>
                                     </div>
                                     <div class="col-md-9">
                                         <div class="form-group">
                                             <label for="name" class="bmd-label-floating">Name</label>
-                                            <input type="text" name="name" th:field="${user.fullName}" class="form-control">
+                                            <input type="text" id="name" name="name" th:field="${user.fullName}" class="form-control">
                                         </div>
                                     </div>
                                 </div>
@@ -37,13 +36,13 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="username" class="bmd-label-floating">User Name</label>
-                                            <input type="text" name="price" th:field="${user.username}" class="form-control">
+                                            <input type="text" id="username" name="price" th:field="${user.username}" class="form-control">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="password" class="bmd-label-floating">PassWord</label>
-                                            <input type="password" name="quantity" th:field="${user.password}" class="form-control">
+                                            <input type="password" id="password" name="quantity" th:field="${user.password}" class="form-control">
                                         </div>
                                     </div>
                                 </div>
@@ -52,13 +51,13 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="phone" class="bmd-label-floating">Phone</label>
-                                            <input type="number" name="price" th:field="${user.phone}" class="form-control" >
+                                            <input type="number" id="phone" name="price" th:field="${user.phone}" class="form-control" >
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="email" class="bmd-label-floating">Email</label>
-                                            <input type="email" name="quantity" th:field="${user.email}" class="form-control">
+                                            <input type="email" id="email" name="quantity" th:field="${user.email}" class="form-control">
                                         </div>
                                     </div>
                                 </div>
@@ -67,13 +66,7 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="address" class="bmd-label-floating">Address</label>
-                                            <input type="text" name="quantity" th:field="${user.address}" class="form-control">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label for="address" class="bmd-label-floating">Roleo</label>
-                                            <input type="text" name="quantity" th:field="${user.roleid}" class="form-control">
+                                            <input type="text"  id="address" name="quantity" th:field="${user.address}" class="form-control">
                                         </div>
                                     </div>
                                 </div>
@@ -86,42 +79,6 @@
             </div>
         </div>
     </div>
-
-    <footer class="footer">
-        <div class="container-fluid">
-            <nav class="float-left">
-                <ul>
-                    <li>
-                        <a href="https://www.creative-tim.com">
-                            Creative Tim
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://creative-tim.com/presentation">
-                            About Us
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://blog.creative-tim.com">
-                            Blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.creative-tim.com/license">
-                            Licenses
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="copyright float-right">
-                &copy;
-                <script>
-                    document.write(new Date().getFullYear())
-                </script>, made with <i class="material-icons">favorite</i> by
-                <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
-            </div>
-        </div>
-    </footer>
 </div>
 </body>
 </html>
